salles-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salles-service
spec:
  selector:
    app: salles-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
